# brarchive-rs

./: .gitignore  Cargo.toml  README.md
crates/brarchive/: Cargo.toml
crates/brarchive-cli/: Cargo.toml
crates/brarchive-cli/src/: args.rs  logger.rs  main.rs
crates/brarchive/src/: de.rs  lib.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: entities.brarchive  entities.rs  items.brarchive  items.rs  recipes.brarchive  recipes.rs
