[package]
name = "brarchive"
version = "0.1.1"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
readme = "../../README.md"
description = "Library for Bedrock Archives in Rust"
repository = "https://github.com/theaddonn/brarchive-rs"
license = "Apache-2.0"
keywords = ["archive", "archive", "minecraft", "bedrock"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
byteorder = "1.5"
thiserror = "2.0"
